Ajuste a nombre de NameSpace

--- a/ConvertorDivisa/App.config
+++ b/ConvertorDivisa/App.config
@@ -11,8 +11,8 @@
   app.config del host. La configuración del sistema no admite archivos de configuración en las bibliotecas. -->
   <system.serviceModel>
     <services>
-      <service name="ConvertorDivisa.ServicioDivisas">
-        <endpoint address="" binding="basicHttpBinding" contract="ConvertorDivisa.IServicioDivisas">
+      <service name="Conversores.ServicioDivisas">
+        <endpoint address="" binding="basicHttpBinding" contract="Conversores.IServicioDivisas">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -23,22 +23,20 @@
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/ConvertorDivisa/Service1/" />
           </baseAddresses>
         </host>
-		  <!--Servicio Temperatura-->
       </service>
-		<service name="ConvertorDivisa.ServicioTemperatura">
-			<endpoint address="" binding="basicHttpBinding" contract="ConvertorDivisa.IServicioTemperatura">
-				<identity>
-					<dns value="localhost" />
-				</identity>
-			</endpoint>
-			<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-			<host>
-				<baseAddresses>
-					<add baseAddress="http://localhost:8733/Design_Time_Addresses/ConvertorDivisa/ServicioTemperatura/" />
-				</baseAddresses>
-			</host>
-		</service>
-		
+      <service name="Conversores.ServicioTemperatura">
+        <endpoint address="" binding="basicHttpBinding" contract="Conversores.IServicioTemperatura">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/ConvertorDivisa/ServicioTemperatura/" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
